force-app/main/default/objects/TermsAdministration__c/TermsAdministration__c.object-meta.xml
<CustomObject>
    <description>Tabella Amministrativa per il calcolo del mancato dovuto nei processi tari</description>
    <label>Amministrazione Scadenze</label>
    <nameField>
        <displayFormat>AS - {000000}</displayFormat>
        <label>Numero Amministrazione Scadenze</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amministrazione Scadenze</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>