force-app/main/default/objects/TermsAdministration__c/fields/MortageNumber__c.field-meta.xml
<CustomField>
    <fullName>MortageNumber__c</fullName>
    <label>Numero Rata</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>